--- a/NlpWithDisasterTweets.ipynb
+++ b/NlpWithDisasterTweets.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,21 +25,23 @@
     "import numpy as np\n",
     "from tensorflow.keras import Model\n",
     "from tensorflow.keras.layers import Dense, Input\n",
-    "from tensorflow import keras"
+    "from tensorflow import keras\n",
+    "from tensorflow.keras.callbacks import ModelCheckpoint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df = pd.read_csv(\"nlp-getting-started/train.csv\")"
+    "train_df = pd.read_csv(\"nlp-getting-started/train.csv\")\n",
+    "test_df = pd.read_csv(\"nlp-getting-started/test.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -53,40 +55,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_ids = []\n",
-    "sequence_ids = []\n",
-    "attention_mask_ids = []\n",
-    "max_len = 512\n",
-    "for text in train_df.text:\n",
-    "    input_tokens = tokenizer.tokenize(text)\n",
-    "    input_tokens = ['[CLS]'] + input_tokens + ['[SEP]']\n",
-    "    padding_len = max_len - len(input_tokens)\n",
-    "    token_ids = tokenizer.convert_tokens_to_ids(input_tokens)\n",
-    "    token_ids += [0] * padding_len\n",
-    "    attention_mask = [1] * len(input_tokens) + [0] * padding_len\n",
-    "    sequence = [1] * max_len\n",
-    "    \n",
-    "    attention_mask_ids.append(attention_mask)\n",
-    "    sequence_ids.append(sequence)\n",
-    "    input_ids.append(ids)\n",
+    "def encode_text(text_input):\n",
+    "    for text in text_input:\n",
+    "        input_ids = []\n",
+    "        sequence_ids = []\n",
+    "        attention_mask_ids = []\n",
+    "        input_tokens = tokenizer.tokenize(text)\n",
+    "        input_tokens = ['[CLS]'] + input_tokens + ['[SEP]']\n",
+    "        padding_len = max_len - len(input_tokens)\n",
+    "        token_ids = tokenizer.convert_tokens_to_ids(input_tokens)\n",
+    "        token_ids += [0] * padding_len\n",
+    "        attention_mask = [1] * len(input_tokens) + [0] * padding_len\n",
+    "        sequence = [1] * max_len\n",
     "\n",
+    "        attention_mask_ids.append(attention_mask)\n",
+    "        sequence_ids.append(sequence)\n",
+    "        input_ids.append(token_ids)\n",
     "    \n",
-    "sequence_ids = np.array(sequence_ids)\n",
-    "input_ids = np.array(input_ids)\n",
-    "attention_mask_ids = np.array(attention_mask_ids)\n",
-    "input_data = input_ids, attention_mask_ids, sequence_ids\n",
-    "labels = np.array(train_df.target)"
+    "        sequence_ids = np.array(sequence_ids)\n",
+    "        input_ids = np.array(input_ids)\n",
+    "        attention_mask_ids = np.array(attention_mask_ids)\n",
+    "        return input_ids, attention_mask_ids, sequence_ids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
+   "source": [
+    "max_len = 512\n",
+    "labels = np.array(train_df.target)\n",
+    "train_input = encode_text(train_df.text)\n",
+    "test_input = encode_text(test_df.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model_1\"\n",
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "input_word_ids (InputLayer)     [(None, 512)]        0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "input_mask (InputLayer)         [(None, 512)]        0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "segment_ids (InputLayer)        [(None, 512)]        0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "keras_layer_1 (KerasLayer)      [(None, 768), (None, 109482241   input_word_ids[0][0]             \n",
+      "                                                                 input_mask[0][0]                 \n",
+      "                                                                 segment_ids[0][0]                \n",
+      "__________________________________________________________________________________________________\n",
+      "tf_op_layer_strided_slice_2 (Te [(None, 768)]        0           keras_layer_1[2][1]              \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_2 (Dense)                 (None, 1)            769         tf_op_layer_strided_slice_2[0][0]\n",
+      "==================================================================================================\n",
+      "Total params: 109,483,010\n",
+      "Trainable params: 109,483,009\n",
+      "Non-trainable params: 1\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "max_seq_length = 512\n",
     "input_tokens_ids = Input(shape=(max_seq_length,), dtype=tf.int32, name=\"input_word_ids\")\n",
@@ -95,9 +138,24 @@
     "inputs = [input_tokens_ids, attention_mask_ids, sequence_ids]\n",
     "pooled_output, sequence_output = bert_layer(inputs)\n",
     "outputs = Dense(1, activation = 'sigmoid')(sequence_output[:, 0, :])\n",
-    "\n",
+    "model = Model(inputs=inputs, outputs=outputs)\n",
     "opt = keras.optimizers.Adam(learning_rate = 0.01)\n",
     "model.compile(optimizer = opt, loss = 'binary_crossentropy', metric = 'accuracy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "checkpoint_file_path = \"model_checkpoint_weights/ weights.{epoch:02d}-{val_loss:.2f}.h5\"\n",
+    "model_checkpoint = ModelCheckpoint(filepath = checkpoint_file_path, \n",
+    "                                   save_weights_only = True,\n",
+    "                                   monitor = 'val_acc', \n",
+    "                                   mode = 'max',\n",
+    "                                   save_best_only = True,\n",
+    "                                   verbose = True)"
    ]
   },
   {
@@ -114,7 +172,41 @@
     }
    ],
    "source": [
-    "model.fit(input_data, labels, epochs = 1)"
+    "model.fit(input_data, labels, epochs = 10, batch_size = 32, callbacks = model_checkpoint, validation_split = 0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weight_file = \"\"\n",
+    "model.load_weights(weight_file)\n",
+    "pred = model.predict(test_input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pred' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-645668f8e010>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mkaggle_submission\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'target'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mkaggle_submission\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'target'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpred\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'pred' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "kaggle_submission = pd.DataFrame(columns = ['target'])\n",
+    "kaggle_submission['target'] = pred.round().astype(int)\n",
+    "kaggle_submission.to_csv('kaggle_submission.csv', index = True)"
    ]
   },
   {
