--- a/NlpWithDisasterTweets.ipynb
+++ b/NlpWithDisasterTweets.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,8 @@
     "from tensorflow.keras import Model\n",
     "from tensorflow.keras.layers import Dense, Input\n",
     "from tensorflow import keras\n",
-    "from tensorflow.keras.callbacks import ModelCheckpoint"
+    "from tensorflow.keras.callbacks import ModelCheckpoint\n",
+    "from tensorflow.keras.callbacks import EarlyStopping"
    ]
   },
   {
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +156,14 @@
     "                                   monitor = 'val_acc', \n",
     "                                   mode = 'max',\n",
     "                                   save_best_only = True,\n",
-    "                                   verbose = True)"
+    "                                   verbose = True)\n",
+    "early_stopping = EarlyStopping(monitor=\"val_loss\",\n",
+    "                                min_delta=0.01,\n",
+    "                                patience=3,\n",
+    "                                verbose=1,\n",
+    "                                mode=\"auto\",\n",
+    "                                baseline=None,\n",
+    "                                restore_best_weights=True)"
    ]
   },
   {
@@ -172,7 +180,7 @@
     }
    ],
    "source": [
-    "model.fit(input_data, labels, epochs = 10, batch_size = 32, callbacks = model_checkpoint, validation_split = 0.3)"
+    "model.fit(input_data, labels, epochs = 10, batch_size = 32, callbacks = [model_checkpoint, early_stoppping], validation_split = 0.3)"
    ]
   },
   {
