Add encode function fix

--- a/NlpWithDisasterTweets.ipynb
+++ b/NlpWithDisasterTweets.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 68,
    "metadata": {
     "scrolled": true
    },
@@ -56,15 +56,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "def encode_text(text_input):\n",
+    "    input_ids = []\n",
+    "    sequence_ids = []\n",
+    "    attention_mask_ids = []\n",
     "    for text in text_input:\n",
-    "        input_ids = []\n",
-    "        sequence_ids = []\n",
-    "        attention_mask_ids = []\n",
     "        input_tokens = tokenizer.tokenize(text)\n",
     "        input_tokens = ['[CLS]'] + input_tokens + ['[SEP]']\n",
     "        padding_len = max_len - len(input_tokens)\n",
@@ -77,15 +77,15 @@
     "        sequence_ids.append(sequence)\n",
     "        input_ids.append(token_ids)\n",
     "    \n",
-    "        sequence_ids = np.array(sequence_ids)\n",
-    "        input_ids = np.array(input_ids)\n",
-    "        attention_mask_ids = np.array(attention_mask_ids)\n",
-    "        return input_ids, attention_mask_ids, sequence_ids"
+    "    sequence_ids = np.array(sequence_ids)\n",
+    "    input_ids = np.array(input_ids)\n",
+    "    attention_mask_ids = np.array(attention_mask_ids)\n",
+    "    return input_ids, attention_mask_ids, sequence_ids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 70,
    "metadata": {
     "scrolled": true
    },
@@ -99,38 +99,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"model_1\"\n",
-      "__________________________________________________________________________________________________\n",
-      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
-      "==================================================================================================\n",
-      "input_word_ids (InputLayer)     [(None, 512)]        0                                            \n",
-      "__________________________________________________________________________________________________\n",
-      "input_mask (InputLayer)         [(None, 512)]        0                                            \n",
-      "__________________________________________________________________________________________________\n",
-      "segment_ids (InputLayer)        [(None, 512)]        0                                            \n",
-      "__________________________________________________________________________________________________\n",
-      "keras_layer_1 (KerasLayer)      [(None, 768), (None, 109482241   input_word_ids[0][0]             \n",
-      "                                                                 input_mask[0][0]                 \n",
-      "                                                                 segment_ids[0][0]                \n",
-      "__________________________________________________________________________________________________\n",
-      "tf_op_layer_strided_slice_2 (Te [(None, 768)]        0           keras_layer_1[2][1]              \n",
-      "__________________________________________________________________________________________________\n",
-      "dense_2 (Dense)                 (None, 1)            769         tf_op_layer_strided_slice_2[0][0]\n",
-      "==================================================================================================\n",
-      "Total params: 109,483,010\n",
-      "Trainable params: 109,483,009\n",
-      "Non-trainable params: 1\n",
-      "__________________________________________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "max_seq_length = 512\n",
     "input_tokens_ids = Input(shape=(max_seq_length,), dtype=tf.int32, name=\"input_word_ids\")\n",
@@ -146,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,17 +141,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train on 7613 samples\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model.fit(input_data, labels, epochs = 10, batch_size = 32, callbacks = [model_checkpoint, early_stoppping], validation_split = 0.3)"
+    "input_data = encode_text(train_df.text)\n",
+    "model.fit(input_data, labels, epochs = 10, batch_size = 32, callbacks = [model_checkpoint, early_stopping])"
    ]
   },
   {
