Add validation split

--- a/NlpWithDisasterTweets.ipynb
+++ b/NlpWithDisasterTweets.ipynb
@@ -14,9 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.3.0\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from bert import tokenization\n",
@@ -27,12 +35,14 @@
     "from tensorflow.keras.layers import Dense, Input\n",
     "from tensorflow import keras\n",
     "from tensorflow.keras.callbacks import ModelCheckpoint\n",
-    "from tensorflow.keras.callbacks import EarlyStopping"
+    "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "import tensorflow_datasets as tfds\n",
+    "from sklearn import model_selection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,13 +52,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "bert_layer = hub.KerasLayer(\"https://tfhub.dev/tensorflow/bert_en_uncased_L-12_H-768_A-12/2\", trainable = True)\n",
+    "bert_layer = hub.KerasLayer(\"https://tfhub.dev/tensorflow/bert_en_uncased_L-12_H-768_A-12/2\", trainable = False)\n",
     "vocab_file = bert_layer.resolved_object.vocab_file.asset_path.numpy()\n",
     "do_lower_case = bert_layer.resolved_object.do_lower_case.numpy()\n",
     "tokenizer = tokenization.FullTokenizer(vocab_file, do_lower_case)"
@@ -56,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -93,14 +103,16 @@
    "source": [
     "max_len = 512\n",
     "labels = np.array(train_df.target)\n",
-    "train_input = encode_text(train_df.text)\n",
-    "test_input = encode_text(test_df.text)"
+    "input_data = encode_text(train_df.text)\n",
+    "test_data = encode_text(test_df.text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "max_seq_length = 512\n",
@@ -109,15 +121,17 @@
     "sequence_ids = Input(shape=(max_seq_length,), dtype=tf.int32, name=\"segment_ids\")\n",
     "inputs = [input_tokens_ids, attention_mask_ids, sequence_ids]\n",
     "pooled_output, sequence_output = bert_layer(inputs)\n",
-    "outputs = Dense(1, activation = 'sigmoid')(sequence_output[:, 0, :])\n",
+    "h = Dense(256, activation = \"relu\")(sequence_output[:, 0, :])\n",
+    "h = Dense(256, activation = \"relu\")(h)\n",
+    "outputs = Dense(1, activation = 'sigmoid')(h)\n",
     "model = Model(inputs=inputs, outputs=outputs)\n",
     "opt = keras.optimizers.Adam(learning_rate = 0.01)\n",
-    "model.compile(optimizer = opt, loss = 'binary_crossentropy', metric = 'accuracy')"
+    "model.compile(optimizer = opt, loss = 'binary_crossentropy', metrics = 'accuracy')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,10 +155,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n"
+     ]
+    }
+   ],
    "source": [
-    "input_data = encode_text(train_df.text)\n",
-    "model.fit(input_data, labels, epochs = 10, batch_size = 32, callbacks = [model_checkpoint, early_stopping])"
+    "model.fit(input_data, labels, epochs = 10, batch_size = 32, validation_split = 0.3, callbacks = [model_checkpoint, early_stopping])"
    ]
   },
   {
