--- a/NlpWithDisasterTweets.ipynb
+++ b/NlpWithDisasterTweets.ipynb
@@ -14,17 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.3.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from bert import tokenization\n",
@@ -37,12 +29,14 @@
     "from tensorflow.keras.callbacks import ModelCheckpoint\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
     "import tensorflow_datasets as tfds\n",
-    "from sklearn import model_selection"
+    "from sklearn import model_selection\n",
+    "import re\n",
+    "pd.set_option(\"display.max_rows\", None, \"display.max_columns\", None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,10 +46,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "metadata": {
     "scrolled": true
    },
+   "outputs": [],
+   "source": [
+    "contractions = { \n",
+    "\"ain't\": \"am not / are not / is not / has not / have not\",\n",
+    "\"aren't\": \"are not / am not\",\n",
+    "\"can't\": \"cannot\",\n",
+    "\"can't've\": \"cannot have\",\n",
+    "\"'cause\": \"because\",\n",
+    "\"could've\": \"could have\",\n",
+    "\"couldn't\": \"could not\",\n",
+    "\"couldn't've\": \"could not have\",\n",
+    "\"didn't\": \"did not\",\n",
+    "\"doesn't\": \"does not\",\n",
+    "\"don't\": \"do not\",\n",
+    "\"hadn't\": \"had not\",\n",
+    "\"hadn't've\": \"had not have\",\n",
+    "\"hasn't\": \"has not\",\n",
+    "\"haven't\": \"have not\",\n",
+    "\"he'd\": \"he had / he would\",\n",
+    "\"he'd've\": \"he would have\",\n",
+    "\"he'll\": \"he shall / he will\",\n",
+    "\"he'll've\": \"he shall have / he will have\",\n",
+    "\"he's\": \"he has / he is\",\n",
+    "\"how'd\": \"how did\",\n",
+    "\"how'd'y\": \"how do you\",\n",
+    "\"how'll\": \"how will\",\n",
+    "\"how's\": \"how has / how is / how does\",\n",
+    "\"I'd\": \"I had / I would\",\n",
+    "\"I'd've\": \"I would have\",\n",
+    "\"I'll\": \"I shall / I will\",\n",
+    "\"I'll've\": \"I shall have / I will have\",\n",
+    "\"I'm\": \"I am\",\n",
+    "\"I've\": \"I have\",\n",
+    "\"isn't\": \"is not\",\n",
+    "\"it'd\": \"it had / it would\",\n",
+    "\"it'd've\": \"it would have\",\n",
+    "\"it'll\": \"it shall / it will\",\n",
+    "\"it'll've\": \"it shall have / it will have\",\n",
+    "\"it's\": \"it has / it is\",\n",
+    "\"let's\": \"let us\",\n",
+    "\"ma'am\": \"madam\",\n",
+    "\"mayn't\": \"may not\",\n",
+    "\"might've\": \"might have\",\n",
+    "\"mightn't\": \"might not\",\n",
+    "\"mightn't've\": \"might not have\",\n",
+    "\"must've\": \"must have\",\n",
+    "\"mustn't\": \"must not\",\n",
+    "\"mustn't've\": \"must not have\",\n",
+    "\"needn't\": \"need not\",\n",
+    "\"needn't've\": \"need not have\",\n",
+    "\"o'clock\": \"of the clock\",\n",
+    "\"oughtn't\": \"ought not\",\n",
+    "\"oughtn't've\": \"ought not have\",\n",
+    "\"shan't\": \"shall not\",\n",
+    "\"sha'n't\": \"shall not\",\n",
+    "\"shan't've\": \"shall not have\",\n",
+    "\"she'd\": \"she had / she would\",\n",
+    "\"she'd've\": \"she would have\",\n",
+    "\"she'll\": \"she shall / she will\",\n",
+    "\"she'll've\": \"she shall have / she will have\",\n",
+    "\"she's\": \"she has / she is\",\n",
+    "\"should've\": \"should have\",\n",
+    "\"shouldn't\": \"should not\",\n",
+    "\"shouldn't've\": \"should not have\",\n",
+    "\"so've\": \"so have\",\n",
+    "\"so's\": \"so as / so is\",\n",
+    "\"that'd\": \"that would / that had\",\n",
+    "\"that'd've\": \"that would have\",\n",
+    "\"that's\": \"that has / that is\",\n",
+    "\"there'd\": \"there had / there would\",\n",
+    "\"there'd've\": \"there would have\",\n",
+    "\"there's\": \"there has / there is\",\n",
+    "\"they'd\": \"they had / they would\",\n",
+    "\"they'd've\": \"they would have\",\n",
+    "\"they'll\": \"they shall / they will\",\n",
+    "\"they'll've\": \"they shall have / they will have\",\n",
+    "\"they're\": \"they are\",\n",
+    "\"they've\": \"they have\",\n",
+    "\"to've\": \"to have\",\n",
+    "\"wasn't\": \"was not\",\n",
+    "\"we'd\": \"we had / we would\",\n",
+    "\"we'd've\": \"we would have\",\n",
+    "\"we'll\": \"we will\",\n",
+    "\"we'll've\": \"we will have\",\n",
+    "\"we're\": \"we are\",\n",
+    "\"we've\": \"we have\",\n",
+    "\"weren't\": \"were not\",\n",
+    "\"what'll\": \"what shall / what will\",\n",
+    "\"what'll've\": \"what shall have / what will have\",\n",
+    "\"what're\": \"what are\",\n",
+    "\"what's\": \"what has / what is\",\n",
+    "\"what've\": \"what have\",\n",
+    "\"when's\": \"when has / when is\",\n",
+    "\"when've\": \"when have\",\n",
+    "\"where'd\": \"where did\",\n",
+    "\"where's\": \"where has / where is\",\n",
+    "\"where've\": \"where have\",\n",
+    "\"who'll\": \"who shall / who will\",\n",
+    "\"who'll've\": \"who shall have / who will have\",\n",
+    "\"who's\": \"who has / who is\",\n",
+    "\"who've\": \"who have\",\n",
+    "\"why's\": \"why has / why is\",\n",
+    "\"why've\": \"why have\",\n",
+    "\"will've\": \"will have\",\n",
+    "\"won't\": \"will not\",\n",
+    "\"won't've\": \"will not have\",\n",
+    "\"would've\": \"would have\",\n",
+    "\"wouldn't\": \"would not\",\n",
+    "\"wouldn't've\": \"would not have\",\n",
+    "\"y'all\": \"you all\",\n",
+    "\"y'all'd\": \"you all would\",\n",
+    "\"y'all'd've\": \"you all would have\",\n",
+    "\"y'all're\": \"you all are\",\n",
+    "\"y'all've\": \"you all have\",\n",
+    "\"you'd\": \"you had / you would\",\n",
+    "\"you'd've\": \"you would have\",\n",
+    "\"you'll\": \"you shall / you will\",\n",
+    "\"you'll've\": \"you shall have / you will have\",\n",
+    "\"you're\": \"you are\",\n",
+    "\"you've\": \"you have\"\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def replace(match):\n",
+    "    return contractions[match.group(0)]\n",
+    "\n",
+    "def expand_contractions(s):\n",
+    "    pattern = \"|\".join(contractions.keys())\n",
+    "    return re.sub(pattern, replace, s)\n",
+    "\n",
+    "def remove_usernames(s):\n",
+    "    pattern = \"(@[A-Za-z0-9\\_]+)\"\n",
+    "    return re.sub(pattern, \" \", s)\n",
+    "\n",
+    "def remove_links(s):\n",
+    "    pattern = \"http[\\S]+\"\n",
+    "    return re.sub(pattern, \"\", s)\n",
+    "\n",
+    "def remove_emojis(s):\n",
+    "    pattern = \"\\[\" \"\\U0001F600-\\U0001F64F\" \n",
+    "    \"\\U0001F300-\\U0001F5FF\" \n",
+    "    \"\\U0001F680-\\U0001F6FF\" \n",
+    "    \"\\U0001F1E0-\\U0001F1FF\"\"\\]+\"\n",
+    "    return re.sub(pattern, \"\", s)\n",
+    "\n",
+    "def remove_hashtags(s):\n",
+    "    pattern = \"(#[A-Za-z0-9\\_]+)\"\n",
+    "    return re.sub(pattern, \"\", s)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "train_df['text'] = train_df['text'].astype(str)\n",
+    "train_df['text'] = train_df['text'].apply(expand_contractions)\n",
+    "train_df['text'] = train_df['text'].apply(remove_usernames)\n",
+    "train_df['text'] = train_df['text'].apply(remove_links)\n",
+    "train_df['text'] = train_df['text'].apply(remove_emojis)\n",
+    "train_df['text'] = train_df['text'].apply(remove_hashtags)\n",
+    "#print(train_df['text'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "keyword_data = train_df['keyword']\n",
+    "\n",
+    "keyword_data.isnull().sum()\n",
+    "unique_keywords = keyword_data.unique().tolist() \n",
+    "\n",
+    "keyword_codes, keyword_uniques = keyword_data.factorize()\n",
+    "keyword_dummies = keyword_data.str.get_dummies() # one hot encoding "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
    "outputs": [],
    "source": [
     "bert_layer = hub.KerasLayer(\"https://tfhub.dev/tensorflow/bert_en_uncased_L-12_H-768_A-12/2\", trainable = False)\n",
@@ -66,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,11 +290,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tokenizer' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-38a688a9933f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mmax_len\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m512\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0minput_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mencode_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mtest_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mencode_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-4-45a2ce1c6f92>\u001b[0m in \u001b[0;36mencode_text\u001b[0;34m(text_input)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mattention_mask_ids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mtext\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtext_input\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0minput_tokens\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtokenizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtokenize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0minput_tokens\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'[CLS]'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0minput_tokens\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'[SEP]'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mpadding_len\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax_len\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_tokens\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tokenizer' is not defined"
+     ]
+    }
+   ],
    "source": [
     "max_len = 512\n",
     "labels = np.array(train_df.target)\n",
@@ -109,15 +317,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "max_seq_length = 512\n",
     "input_tokens_ids = Input(shape=(max_seq_length,), dtype=tf.int32, name=\"input_word_ids\")\n",
-    "attention_mask_ids= Input(shape=(max_seq_length,), dtype=tf.int32, name=\"input_mask\")  \n",
+    "attention_mask_ids= Input(shape=(max_seq_length,), dtype=tf.int32, name=\"input_mask\") \n",
     "sequence_ids = Input(shape=(max_seq_length,), dtype=tf.int32, name=\"segment_ids\")\n",
     "inputs = [input_tokens_ids, attention_mask_ids, sequence_ids]\n",
     "pooled_output, sequence_output = bert_layer(inputs)\n",
@@ -131,8 +339,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "checkpoint_file_path = \"model_checkpoint_weights/ weights.{epoch:02d}-{val_loss:.2f}.h5\"\n",
@@ -142,6 +352,7 @@
     "                                   mode = 'max',\n",
     "                                   save_best_only = True,\n",
     "                                   verbose = True)\n",
+    "\n",
     "early_stopping = EarlyStopping(monitor=\"val_loss\",\n",
     "                                min_delta=0.01,\n",
     "                                patience=3,\n",
@@ -154,16 +365,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/10\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "model.fit(input_data, labels, epochs = 10, batch_size = 32, validation_split = 0.3, callbacks = [model_checkpoint, early_stopping])"
    ]
@@ -171,7 +376,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "weight_file = \"\"\n",
@@ -181,26 +388,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pred' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-645668f8e010>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mkaggle_submission\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'target'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mkaggle_submission\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'target'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpred\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'pred' is not defined"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "kaggle_submission = pd.DataFrame(columns = ['target'])\n",
     "kaggle_submission['target'] = pred.round().astype(int)\n",
     "kaggle_submission.to_csv('kaggle_submission.csv', index = True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
